# sg-smart-city-analytics

./: .dockerignore  .env.deployment.example  .gitignore  CATI_HANDOVER.md  DEPLOY_NOW.md  Dockerfile  EXECUTE.sh  EXECUTION_RUNBOOK.md  GIT_STRATEGY.md  Makefile  PROJECT_STATUS.md  PROJECT_WALKTHROUGH.md  QUICK_DEMO_PATH.md  README.md  RESEARCH_PROPOSAL.md  START_HERE.md  STATUS.md  VERCEL_DEPLOY.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  requirements-test.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-azure.yml  drift_monitor.yml  ml_deploy.yml
configs/: collection_config.yaml  traffic_dataset.yaml  training_config.yaml
dashboard/: README.md  next.config.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: Map.tsx
dashboard/src/: App.css  App.jsx  index.css
deploy/: DEPLOYMENT.md  DEPLOYMENT_STRATEGY.md  setup-aws-ec2.md  setup-azure-vm.sh  setup-railway.md
docs/: AWS_ARCHITECTURE.md  ML_DATA_STRATEGY.md  ZERO_COMPUTE_GUIDE.md
k8s/: api-deployment.yaml  inference-deployment.yaml  milvus-statefulset.yaml  redpanda-statefulset.yaml
notebooks/: collect_data.ipynb  diagnostic_vlm.ipynb  evaluate_model.ipynb  gold_feature_store.ipynb  prepare_dataset.ipynb  silver_etl.ipynb  train_cati.ipynb  train_stgnn_pinn.ipynb  train_yolo.ipynb
scripts/: collect_data_colab.py  demo_inference.py  deploy_azure_vm.py  export_edge_onnx.py  generate_mock_dash_data.py  setup_azure_vm.sh  train_yolo_colab.py
src/: pipeline.py
src/analytics/: benchmark.py  drift_monitor.py  failure_analyzer.py  predictor.py
src/api/: server.py
tests/: test_analytics.py  test_collector.py  test_detector.py  test_models.py  test_predictor.py  test_training.py
(+143 files in other folders)
